--- a/gemfile
+++ b/gemfile
@@ -1,1 +1,5 @@
+source 'https://rubygems.org'
+git_source(:github) { |repo| "https://github.com/#{repo}.git" }
+
 gem 'rake', '~> 13.0', '>= 13.0.4'
+gem 'pry', '~> 0.13.1'
